Scrolling on mobile fixed

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -296,6 +296,8 @@ section#calculator
             top: 0
             padding-top: .8em
             padding-right: 5px
+            white-space: nowrap
+            overflow-x: scroll
         #error-label
             font-size: .65em
             color: $error-color
